Decreased a lot of vertical spacing. Fixed bullet lists.

--- a/PublicDoc/docs/_static/css/custom.css
+++ b/PublicDoc/docs/_static/css/custom.css
@@ -1,5 +1,5 @@
 /* -----------------------------------------------------------------------------
- * Backgrounds and other colors.
+ * Navigation area colors (left side).
  * -------------------------------------------------------------------------- */
 
 /* Top-left background is set in conf.py (style_nav_header_background). */
@@ -24,6 +24,35 @@
     color: #111166;
 }
 
+.wy-side-nav-search div.version {
+    color: #eeeeee;
+}
+
+
+/* -----------------------------------------------------------------------------
+ * Reduce main content vertical space.
+ * -------------------------------------------------------------------------- */
+
+.wy-nav-content p {
+    margin-block-start: 8px;
+    margin-block-end:   8px;
+}
+
+.wy-nav-content h1, .wy-nav-content h2, .wy-nav-content h3,
+.wy-nav-content h4, .wy-nav-content h5, .wy-nav-content h6 {
+    margin-bottom:      12px;
+}
+
+.wy-nav-content section ul, .wy-nav-content blockquote {
+    margin-block-start: 8px;
+    margin-block-end:   8px;
+    margin-bottom:      8px;
+}
+    
+/* -----------------------------------------------------------------------------
+ * Main content section colors. 
+ * -------------------------------------------------------------------------- */
+
 /* Main content area. */
 .wy-nav-content {
     background: #eeeeee;
@@ -37,16 +66,8 @@
     filter: brightness(0.97);
 }
 
-.wy-side-nav-search div.version {
-    color: #eeeeee;
-}
-
-.caption-text {
-    color: black;
-}
-
 /* -----------------------------------------------------------------------------
- * Sizing and indentation.
+ * Main content section sizing and indentation.
  * -------------------------------------------------------------------------- */
 
 /* Main content area. */
@@ -54,7 +75,7 @@
     max-width: 100%;
 }
 
-/* Section headers. */
+/* Section headings. */
 .wy-nav-content section {
     margin-left:   3px;
     margin-bottom: 2px;
@@ -94,6 +115,7 @@ img {
 .caption-left, .caption-center, .caption-right {
     margin-top: 8px;
     font-style: italic;
+    color:      #666666;
 }
 .caption-left {
     text-align: left;
